--- a/djsample/templates/pages/quizzes.html
+++ b/djsample/templates/pages/quizzes.html
@@ -1,5 +1,7 @@
 {% extends 'pages/base.html' %}
 
+{% load filters %}
+
 {% block title %}Quizzes{% endblock %}
 
 {% block content %}
@@ -9,7 +11,22 @@
       {% for quiz in quizzes %}
         <li class="list-group-item">
           <h6 class="align-self-center m-0">Quiz {{quiz.id}}</h6>
-          <a href="{% url 'quiz' quiz.id  %}""><button class="btn btn-secondary">Start</button></a>
+          <div>
+            {% if user|is_completed:quiz %}
+              <span class="mx-3">{{ user|get_score:quiz }}</span>
+            {% endif %}
+            <a href="{% url 'quiz' quiz.id  %}">
+              {% if user|is_completed:quiz %}
+                <button class="btn btn-secondary">
+                  Try Again
+                </button>
+              {% else %}
+                <button class="btn btn-primary">
+                  Complete
+                </button>
+              {% endif %}
+            </a>
+          </div>
         </li>
       {% endfor %}
     </ul>
